--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,15 @@
 :root {
-  --background: #ffffff;
+  --background: #F8F9FA;
   --foreground: #171717;
+  --card-background: #02000b43;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #252829;
+    --foreground: #ededed;
+    --card-background: #02000b;
+  }
 }
 
 html,
@@ -21,4 +30,14 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+a {
+  color: inherit;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
