--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -12,7 +12,7 @@
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -20,7 +20,13 @@
 
 .logo {
     display: flex;
+    font-family: 'Imperial Script', cursive;
     align-items: center;
+    font-size: 2rem;
+    font-weight: 500;
+    text-decoration: none;
+    transition: color 0.3s;
+    
 }
 
 .nav {
@@ -53,7 +59,7 @@
     color: white;
     padding: 0.8rem 1.5rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     font-size: 1rem;
     font-weight: 500;
     cursor: pointer;
@@ -75,7 +81,7 @@
 
 @media (max-width: 1250px) {
     .container {
-        padding: 1rem 2rem;
+        padding: 0.5rem 2rem;
 
     }
 }
@@ -112,6 +118,6 @@
 
 @media (max-width: 768px) {
     .container {
-        padding: 1rem 1rem;
+        padding: 0.5rem 1rem;
     }
 }
