--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -5,7 +5,8 @@
     right: 0;
     z-index: 1000;
     color: var(--foreground);
-    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(100px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
